VPC/route-table-update-post-EC2-builds.json

{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "VpcStackName": {
            "Type": "String",
            "Default": "SCCA-Demo",
            "Description": "VPC Stack used for referencing exported resources"
        },
        "IPSStackName": {
            "Type": "String",
            "Default": "IPSStack",
            "Description": "BIGIP Stack used for referencing exported resources"
            },
        "BigIPStackNameTier1": {
            "Type": "String",
            "Default": "BIGIPStackTier1",
            "Description": "BIGIP Stack used for referencing exported resources"
            },
        "BigIPStackNameTier2": {
            "Type": "String",
            "Default": "BIGIPStackTier2",
            "Description": "BIGIP Stack used for referencing exported resources"
            }
    },
"Resources": {
  "Tier1InboundRoute1": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "RouteTableId": {
        "Fn::ImportValue": {
            "Fn::Sub": "${VpcStackName}-VdssOutsideRouteTable"
        }
        },
       "DestinationCidrBlock": "10.0.0.0/8",
       "NetworkInterfaceId": {
        "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ExternalInterface" }
        }
       }
    },
  "Tier1InboundRoute2": {
    "Type": "AWS::EC2::Route",
    "Properties": {
        "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssOutsideRouteTable"
            }
        },
       "DestinationCidrBlock": "172.16.0.0/12",
       "NetworkInterfaceId": {
       "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ExternalInterface" }
        }
       }
    },
  "Tier1InboundRoute3": {
    "Type": "AWS::EC2::Route",
    "Properties": {
        "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssOutsideRouteTable"
            }
        },
       "DestinationCidrBlock": "192.168.0.0/16",
       "NetworkInterfaceId": {
       "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ExternalInterface" }
        }
       }
    },
  "Tier1InboundRoute4": {
    "Type": "AWS::EC2::Route",
    "Properties": {
        "RouteTableId": {
        "Fn::ImportValue": {
            "Fn::Sub": "${VpcStackName}-VdssDmz1SubnetRouteTable"
        }
        },
        "DestinationCidrBlock": "10.0.0.0/8",
        "NetworkInterfaceId": {
        "Fn::ImportValue": {
         "Fn::Sub": "${IPSStackName}-IpsExternalInterface" }
         }
       }
    },
  "Tier1InboundRoute5": {
    "Type": "AWS::EC2::Route",
    "Properties": {
        "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssDmz1SubnetRouteTable"
            }
        },
        "DestinationCidrBlock": "172.16.0.0/12",
        "NetworkInterfaceId": {
        "Fn::ImportValue": {
            "Fn::Sub": "${IPSStackName}-IpsExternalInterface" }
        }
        }
    },
  "Tier1InboundRoute6": {
    "Type": "AWS::EC2::Route",
    "Properties": {
        "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssDmz1SubnetRouteTable"
            }
        },
        "DestinationCidrBlock": "192.168.0.0/16",
        "NetworkInterfaceId": {
        "Fn::ImportValue": {
            "Fn::Sub": "${IPSStackName}-IpsExternalInterface" }
        }
        }
    },
    "Tier2InboundRoute1": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssDmz2SubnetRouteTable"
            }
            },
           "DestinationCidrBlock": "10.0.0.0/8",
           "NetworkInterfaceId": {
           "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier2}-Bigip2ExternalInterface" }
            }
           }
        },
      "Tier2InboundRoute2": {
        "Type": "AWS::EC2::Route",
        "Properties": {
            "RouteTableId": {
             "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssDmz2SubnetRouteTable"
             }
            },
           "DestinationCidrBlock": "172.16.0.0/12",
           "NetworkInterfaceId": {
           "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier2}-Bigip2ExternalInterface" }
            }
           }
        },
      "Tier2InboundRoute3": {
        "Type": "AWS::EC2::Route",
        "Properties": {
            "RouteTableId": {
            "Fn::ImportValue": {
                "Fn::Sub": "${VpcStackName}-VdssDmz2SubnetRouteTable"
                }
            },
           "DestinationCidrBlock": "192.168.0.0/16",
           "NetworkInterfaceId": {
           "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier2}-Bigip2ExternalInterface" }
            }
           }
        },
    "IamRole": {
        "Type": "AWS::IAM::Role",
        "Properties": {
        "AssumeRolePolicyDocument": {
            "Version" : "2012-10-17",
            "Statement": [ {
            "Effect": "Allow",
            "Principal": {
                "Service": [ "lambda.amazonaws.com" ]
            },
            "Action": [ "sts:AssumeRole" ]
            } ]
            },
        "Path": "/",
        "Policies": [
            {
             "PolicyDocument": {
              "Statement": [
               {
                "Action": [
                 "ec2:AssignPrivateIpAddresses",
                 "ec2:UnassignPrivateIpAddresses",
                 "ec2:ReplaceRoute",
                 "sts:AssumeRole"
                ],
                "Effect": "Allow",
                "Resource": [
                 "*"
                ]
               }
              ],
              "Version": "2012-10-17"
             },
             "PolicyName": "RouteUpdatesPolicy"
            }
           ],
        "ManagedPolicyArns": [
            "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
            "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
        ]
        }
    },
  "CustomUpdateDMZ2RouteToIPS" : {
    "Type": "Custom::ReplaceRoute",
    "Version" : "1.0",
    "Properties" : {
      "ServiceToken": { "Fn::GetAtt" : ["LambdaReplaceRoute", "Arn"] },
      "dest_cidr_block" : "0.0.0.0/0",
      "interface_id" : {
        "Fn::ImportValue": {
         "Fn::Sub": "${IPSStackName}-IpsInternalInterface" }
         },
      "routetable_id" : {
        "Fn::ImportValue": {
         "Fn::Sub": "${VpcStackName}-VdssDmz2SubnetRouteTable" }
         }
    }
  },
  "CustomUpdateDMZ1RouteToBIGIPExternalTier" : {
    "Type": "Custom::ReplaceRoute",
    "Version" : "1.0",
    "Properties" : {
      "ServiceToken": { "Fn::GetAtt" : ["LambdaReplaceRouteActiveDevice", "Arn"] },
      "mgmt_ip1" : {
        "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier1}-Bigip1ManagementEipAddress"
        }
        },
      "mgmt_ip2" : {
        "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ManagementEipAddress"
        }
        },
      "bucket" : {
        "Fn::ImportValue": {
         "Fn::Sub": "${BigIPStackNameTier1}-S3BucketName" }
         },
         "dest_cidr_block" : "0.0.0.0/0",
         "interface_id1" : {
           "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier1}-Bigip1InternalInterface" }
            },
        "interface_id2" : {
          "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier1}-Bigip2InternalInterface" }
            },
         "routetable_id" : {
           "Fn::ImportValue": {
            "Fn::Sub": "${VpcStackName}-VdssDmz1SubnetRouteTable" }
            }
    }
   },
   "CustomUpdateInternalRouteToBIGIPInternalTier" : {
    "Type": "Custom::ReplaceRoute",
    "Version" : "1.0",
    "Properties" : {
      "ServiceToken": { "Fn::GetAtt" : ["LambdaReplaceRouteActiveDevice", "Arn"] },
      "mgmt_ip1" : {
        "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier2}-Bigip1ManagementEipAddress"
        }
        },
      "mgmt_ip2" : {
        "Fn::ImportValue": {
        "Fn::Sub": "${BigIPStackNameTier2}-Bigip2ManagementEipAddress"
        }
        },
      "bucket" : {
        "Fn::ImportValue": {
         "Fn::Sub": "${BigIPStackNameTier2}-S3BucketName" }
         },
         "dest_cidr_block" : "0.0.0.0/0",
         "interface_id1" : {
           "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier2}-Bigip1InternalInterface" }
            },
        "interface_id2" : {
          "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier2}-Bigip2InternalInterface" }
            },
         "routetable_id" : {
           "Fn::ImportValue": {
            "Fn::Sub": "${VpcStackName}-VdssInternalRouteTable" }
            }
    }
   },
    "LambdaReplaceRoute": {
        "Type": "AWS::Lambda::Function",
        "Properties": {
            "Handler": "index.lambda_handler",
            "Role": {
                "Fn::GetAtt": [
                    "IamRole",
                    "Arn" ]
                 },
            "Code": {
                "ZipFile":  { "Fn::Join": ["\n", [
                    "import logging",
                    "import boto3",
                    "import cfnresponse",
                    "",
                    "logger = logging.getLogger()",
                    "logger.setLevel(logging.INFO)",
                    "ec2 = boto3.resource('ec2')",
                    "client = boto3.client('ec2')",
                    "",
                    "def lambda_handler(event, context):",
                    "  try:",
                    "    logger.info('got event {}'.format(event))",
                    "    dest_cidr_block = event['ResourceProperties'].get('dest_cidr_block')",
                    "    interface_id = event['ResourceProperties'].get('interface_id')",
                    "    routetable_id = event['ResourceProperties'].get('routetable_id')",
                    "",
                    "    if event['RequestType'] == 'Create':  #Create Resource",
                    "      logger.info('dest_cidr_block is {} and interface_id is {} and  routetable_id is {}'.format(dest_cidr_block, interface_id, routetable_id))",
                    "      response = client.replace_route(DestinationCidrBlock=dest_cidr_block,NetworkInterfaceId=interface_id,RouteTableId=routetable_id)",
                    "      logger.info('response is {}'.format(response))",
                    "      cfnresponse.send(event, context, cfnresponse.SUCCESS, response)",
                    "    if event['RequestType'] == 'Delete':",
                    "      responseData = {}",
                    "      cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData)",
                    "  except:",
                    "    logger.info('FAILED!')",
                    "    cfnresponse.send(event, context, \"FAILED\", {\"Message\": \"Exception during processing\"})"
                ]]}
                },
            "Runtime": "python2.7",
            "Timeout": 20
        }
    },
    "LambdaReplaceRouteActiveDevice": {
        "Type": "AWS::Lambda::Function",
        "Properties": {
            "Handler": "index.lambda_handler",
            "Role": {
                "Fn::GetAtt": [
                    "IamRole",
                    "Arn" ]
                 },
            "Code": {
                "ZipFile":  { "Fn::Join": ["\n", [
                    "import logging",
                    "import boto3",
                    "import cfnresponse",
                    "import json",
                    "from botocore.vendored import requests",
                    "",
                    "logger = logging.getLogger()",
                    "logger.setLevel(logging.INFO)",
                    "s3 = boto3.client('s3')",
                    "ec2 = boto3.resource('ec2')",
                    "client = boto3.client('ec2')",
                    "",
                    "def lambda_handler(event, context):",
                    "  try:",
                    "   if event['RequestType'] == 'Create':",
                    "    #set initial variables",
                    "    logger.info('got event {}'.format(event))",
                    "    dest_cidr_block = event['ResourceProperties'].get('dest_cidr_block')",
                    "    interface_id1 = event['ResourceProperties'].get('interface_id1')",
                    "    interface_id2 = event['ResourceProperties'].get('interface_id2')",
                    "    routetable_id = event['ResourceProperties'].get('routetable_id')",
                    "    mgmt_ip1 = event['ResourceProperties'].get('mgmt_ip1')",
                    "    mgmt_ip2 = event['ResourceProperties'].get('mgmt_ip2')",
                    "    bucket = event['ResourceProperties'].get('bucket')",
                    "    key = 'credentials/master'",
                    "",
                    "    data = s3.get_object(Bucket=bucket, Key=key)",
                    "    json_data = data['Body'].read()",
                    "    password = json.loads(json_data)[\"password\"]",
                    "    user = json.loads(json_data)[\"username\"]",
                    "    headers = (user, password)",
                    "",
                    "    url1 = ('https://' + mgmt_ip1 + '/mgmt/tm/cm/failover-status')",
                    "    r1 = requests.get(url1, verify=False, auth=headers)",
                    "    logger.info('r1.text is {}'.format(r1.text))",
                    "",
                    "    url2 = ('https://' + mgmt_ip2 + '/mgmt/tm/cm/failover-status')",
                    "    r2 = requests.get(url2, verify=False, auth=headers)",
                    "    logger.info('r2.text is {}'.format(r2.text))",
                    "",
                    "    resposeJson1 = json.loads(r1.text)",
                    "    status1 = resposeJson1['entries']['https://localhost/mgmt/tm/cm/failover-status/0']['nestedStats']['entries']['status']['description']",
                    "    print(status1)",
                    "",
                    "    resposeJson2 = json.loads(r2.text)",
                    "    status2 = resposeJson2['entries']['https://localhost/mgmt/tm/cm/failover-status/0']['nestedStats']['entries']['status']['description']",
                    "    print(status2)",
                    "",
                    "    if status1=='ACTIVE':",
                    "        responseData={\"ActiveDevice\": \"Bigip1\"}",
                    "        interface_id=interface_id1",
                    "    elif status2=='ACTIVE':",
                    "        responseData={\"ActiveDevice\": \"Bigip2\"}",
                    "        interface_id=interface_id2",
                    "    else:",
                    "     raise Exception('Failed to determine the ACTIVE device in cluster')",
                    "",
                    "    response = client.replace_route(DestinationCidrBlock=dest_cidr_block,NetworkInterfaceId=interface_id,RouteTableId=routetable_id)",
                    "",
                    "    print(responseData)",
                    "",
                    "    cfnresponse.send(event, context, cfnresponse.SUCCESS, response)",
                    "",
                    "   if event['RequestType'] == 'Delete':",
                    "     responseData = {}",
                    "     cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData)",
                    "  except:",
                    "    logger.info('FAILED!')",
                    "    cfnresponse.send(event, context, \"FAILED\", {\"Message\": \"Exception during processing\"})"
                ]]}
                },
            "Runtime": "python2.7",
            "Timeout": 20
        }
    },
      "CustomReassignPrivateIP" : {
        "Type": "Custom::ReassignPrivateIP",
        "Version" : "1.0",
        "Properties" : {
          "ServiceToken": { "Fn::GetAtt" : ["LambdaReassignPrivateIP", "Arn"] },
          "mgmt_ip1" : {
            "Fn::ImportValue": {
              "Fn::Sub": "${BigIPStackNameTier1}-Bigip1ManagementEipAddress"
            }
          },
          "mgmt_ip2" : {
            "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ManagementEipAddress"
            }
          },
          "bucket" : {
            "Fn::ImportValue": {
            "Fn::Sub": "${BigIPStackNameTier1}-S3BucketName" }
            },
          "dest_cidr_block" : "0.0.0.0/0",
          "interface_id1" : {
            "Fn::ImportValue": {
              "Fn::Sub": "${BigIPStackNameTier1}-Bigip1ExternalInterface" }
          },
          "interface_id2" : {
            "Fn::ImportValue": {
              "Fn::Sub": "${BigIPStackNameTier1}-Bigip2ExternalInterface" }
          },
          "private_ip" : {
          "Fn::ImportValue": {
            "Fn::Sub": "${VpcStackName}-ExternalTierVIP" }
          }
        }
      },
      "LambdaReassignPrivateIP": {
        "Type": "AWS::Lambda::Function",
        "Properties": {
            "Handler": "index.lambda_handler",
            "Role": {
                "Fn::GetAtt": [
                    "IamRole",
                    "Arn" ]
                 },
            "Code": {
                "ZipFile":  { "Fn::Join": ["\n", [
                    "import logging",
                    "import boto3",
                    "import cfnresponse",
                    "import json",
                    "from botocore.vendored import requests",
                    "",
                    "logger = logging.getLogger()",
                    "logger.setLevel(logging.INFO)",
                    "s3 = boto3.client('s3')",
                    "ec2 = boto3.resource('ec2')",
                    "client = boto3.client('ec2')",
                    "",
                    "def lambda_handler(event, context):",
                    "  try:",
                    "   if event['RequestType'] == 'Create':",
                    "    #set initial variables",
                    "    logger.info('got event {}'.format(event))",
                    "    interface_id1 = event['ResourceProperties'].get('interface_id1')",
                    "    interface_id2 = event['ResourceProperties'].get('interface_id2')",
                    "    private_ip = event['ResourceProperties'].get('private_ip')",
                    "    mgmt_ip1 = event['ResourceProperties'].get('mgmt_ip1')",
                    "    mgmt_ip2 = event['ResourceProperties'].get('mgmt_ip2')",
                    "    bucket = event['ResourceProperties'].get('bucket')",
                    "    key = 'credentials/master'",
                    "",
                    "    data = s3.get_object(Bucket=bucket, Key=key)",
                    "    json_data = data['Body'].read()",
                    "    password = json.loads(json_data)[\"password\"]",
                    "    user = json.loads(json_data)[\"username\"]",
                    "    headers = (user, password)",
                    "",
                    "    url1 = ('https://' + mgmt_ip1 + '/mgmt/tm/cm/failover-status')",
                    "    r1 = requests.get(url1, verify=False, auth=headers)",
                    "    logger.info('r1.text is {}'.format(r1.text))",
                    "",
                    "    url2 = ('https://' + mgmt_ip2 + '/mgmt/tm/cm/failover-status')",
                    "    r2 = requests.get(url2, verify=False, auth=headers)",
                    "    logger.info('r2.text is {}'.format(r2.text))",
                    "",
                    "    resposeJson1 = json.loads(r1.text)",
                    "    status1 = resposeJson1['entries']['https://localhost/mgmt/tm/cm/failover-status/0']['nestedStats']['entries']['status']['description']",
                    "    print(status1)",
                    "",
                    "    resposeJson2 = json.loads(r2.text)",
                    "    status2 = resposeJson2['entries']['https://localhost/mgmt/tm/cm/failover-status/0']['nestedStats']['entries']['status']['description']",
                    "    print(status2)",
                    "",
                    "    if (status1=='ACTIVE' and status2!='ACTIVE'):",
                    "        responseData={\"ActiveDevice\": \"Bigip1\"}",
                    "        interface_id=interface_id1",
                    "    elif (status2=='ACTIVE' and status1!='ACTIVE'):",
                    "        responseData={\"ActiveDevice\": \"Bigip2\"}",
                    "        interface_id=interface_id2",
                    "    else:",
                    "     raise Exception('Failed to determine the ACTIVE device in cluster')",
                    "",
                    "    print(responseData)",
                    "",
                    "    #make API call to re-map privateIPAddress to external NIC of Active device",
                    "    response = client.assign_private_ip_addresses(AllowReassignment=True,NetworkInterfaceId=interface_id,PrivateIpAddresses=[private_ip])",
                    "",
                    "    print(response)",
                    "",
                    "    cfnresponse.send(event, context, cfnresponse.SUCCESS, response)",
                    "",
                    "   if event['RequestType'] == 'Delete':",
                    "     responseData = {}",
                    "     cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData)",
                    "  except:",
                    "    logger.info('FAILED!')",
                    "    cfnresponse.send(event, context, \"FAILED\", {\"Message\": \"Exception during processing\"})"
                ]]}
                },
            "Runtime": "python2.7",
            "Timeout": 20
        }
    }
    }
}
